--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel-plugin-antd": "^0.2.0",
     "es3ify-loader": "^0.1.0",
     "react": "~0.14.6",
+    "react-dnd": "^2.1.3",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "~0.14.6"
   },
   "devDependencies": {
